Updated for release 5.6.0